fix: thinking in public spacing issues

--- a/assets/scss/elements/_hero.scss
+++ b/assets/scss/elements/_hero.scss
@@ -43,7 +43,8 @@
             .details {
                 h3 {
                     color: var(--olive-green);
-                    margin-bottom: 18px;
+                    margin-bottom: 30px;
+                    text-transform: uppercase;
                 }
             }
         }
@@ -73,7 +74,7 @@
             display: flex;
             align-items: center;
             gap: 26px;
-            margin-bottom: 12px;
+            margin-bottom: 20px;
         }
 
         p {
@@ -270,6 +271,16 @@ iframe {
 
         h1 {
             line-height: 1;
+        }
+    }
+
+    .right & {
+        .details {
+
+            h1 {
+                font-size: 32px;
+                text-transform: uppercase;
+            }
         }
     }
 }
