--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -14,6 +14,8 @@
 body {
   font-family: freight-text-pro, serif;
   color: var(--base-color);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body.overflow_hidden {
@@ -1539,7 +1541,8 @@ button.swiper-pagination-bullet {
 }
 .hero .right .article_item .details h3 {
   color: var(--olive-green);
-  margin-bottom: 18px;
+  margin-bottom: 30px;
+  text-transform: uppercase;
 }
 .hero .article_item {
   width: 100%;
@@ -1563,7 +1566,7 @@ button.swiper-pagination-bullet {
   display: flex;
   align-items: center;
   gap: 26px;
-  margin-bottom: 12px;
+  margin-bottom: 20px;
 }
 .hero .article_info p {
   font-size: 26px;
@@ -1734,6 +1737,10 @@ iframe {
 }
 .article_item .details h1 {
   line-height: 1;
+}
+.right .article_item .details h1 {
+  font-size: 32px;
+  text-transform: uppercase;
 }
 
 .googleAds {
